--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.4.0",
 		"next": "12.1.6",
 		"next-pwa": "^5.5.2",
 		"next-themes": "^0.2.0",
